# passman

./: Cargo.toml  README.md
client/: Cargo.toml
client-egui/: Cargo.toml
client-sdk/: Cargo.toml
client-sdk/src/: lib.rs  storage.rs
client-web/: Cargo.toml
client/src/: cipher.rs  lib.rs  storage.rs
common/: Cargo.toml
common/src/: data.rs  error.rs  lib.rs  suite.rs  uuid.rs
common/src/data/: serde.rs
common/src/http/: api.rs
protocol-spec/: book.toml
protocol-spec/src/: SUMMARY.md
protocol-spec/src/client/: items.md
server/: Cargo.toml
server/src/: main.rs  users.rs
