[workspace]
members = ["client-sdk", "client-web", "common", "server"]

[workspace.dependencies]
common = {path="common"}
client-sdk = {path="client-sdk"}
async-trait = {version="0.1.74"}
async-std = {version = "1.12.0"}
bytemuck = {version = "1.15.0", features=["min_const_generics", "derive"]}
serde = "1.0.198"
serde_json="1.0.116"
uuid={version="1.8.0",features=["serde"]}
time={version="0.3.36", features=["serde", "serde-human-readable"]}
indexmap = {version="2.2.6", features=["serde"]}

[workspace.package]
edition = "2021"
version ="0.1.0"
license="AGPL-3.0-or-later"
license-file="LICENSE"
