[package]
name = "client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
async-trait.workspace = true
async-std.workspace = true
uuid.workspace = true
reqwest = "0.12.5"