[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
serde.workspace = true
uuid.workspace = true
base64 = "0.22.1"
time.workspace = true
indexmap.workspace = true